--- a/client_code/Mainpage/Modal/form_template.yaml
+++ b/client_code/Mainpage/Modal/form_template.yaml
@@ -82,7 +82,7 @@ components:
       - {property: items, code: self.esc_status}
       event_bindings: {}
     - type: Button
-      properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
+      properties: {role: filled-button, align: full, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Submit, font_size: 12, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
@@ -90,7 +90,7 @@ components:
       layout_properties: {grid_position: 'PJAOAY,WMCWJF', full_width_row: false}
       event_bindings: {click: submit_button_click}
     - type: Button
-      properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
+      properties: {role: outlined-button, align: full, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Clear, font_size: 12, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
