--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -362,15 +362,24 @@ components:
     properties:
       role: null
       columns:
-      - {id: LFNRAY, title: Job ID, data_key: job_id, $$hashKey: 'object:391'}
-      - {id: DVFNNA, title: Job Reference, data_key: job_reference, $$hashKey: 'object:393'}
-      - {id: XLQKDN, title: Customer Name, data_key: customer_name, $$hashKey: 'object:395'}
-      - {id: HIBOCD, title: Job Status, data_key: job_status, $$hashKey: 'object:397'}
-      - {id: FREDFV, title: Escalation Type, data_key: escalation_type, $$hashKey: 'object:399'}
-      - {id: MVQPXP, title: Escalation Status, data_key: escalation_status, $$hashKey: 'object:401'}
+      - {id: LFNRAY, title: Job ID, data_key: job_id, $$hashKey: 'object:391', width: '80',
+        expand: false}
+      - {id: DVFNNA, title: Job Reference, data_key: job_reference, $$hashKey: 'object:393',
+        width: '90', expand: false}
+      - {id: XLQKDN, title: Customer Name, data_key: customer_name, $$hashKey: 'object:395',
+        width: '100', expand: false}
+      - {id: HIBOCD, title: Job Status, data_key: job_status, $$hashKey: 'object:397',
+        width: '80'}
+      - {id: FREDFV, title: Escalation Type, data_key: escalation_type, $$hashKey: 'object:399',
+        width: '120'}
+      - {id: MVQPXP, title: Escalation Status, data_key: escalation_status, $$hashKey: 'object:401',
+        width: '120'}
       - {id: JVSRGA, title: Last Action Date, data_key: last_action_date, $$hashKey: 'object:403'}
-      - {id: YBLVEX, title: Job Report, data_key: job_report, $$hashKey: 'object:405'}
-      - {id: FUNZSD, title: Comment History, data_key: comment_history, $$hashKey: 'object:18690'}
+      - {id: DCIFYE, title: Assigned To, data_key: assigned_to, $$hashKey: 'object:33580'}
+      - {id: YBLVEX, title: Job Report, data_key: job_report, $$hashKey: 'object:405',
+        width: '80'}
+      - {id: FUNZSD, title: Comment History, data_key: comment_history, $$hashKey: 'object:18690',
+        width: '80'}
       auto_header: true
       tooltip: ''
       border: ''
@@ -382,7 +391,7 @@ components:
       spacing_above: small
       spacing_below: small
       background: ''
-    layout_properties: {width: 750, row: BEEIKG, width_xs: 12, col_xs: 0}
+    layout_properties: {width: 970, row: BEEIKG, width_xs: 12, col_xs: 0}
     name: data_grid_1
     components:
     - type: RepeatingPanel
