--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -1,14 +1,18 @@
 is_package: true
 container:
   type: ColumnPanel
-  properties: {col_widths: '{"JKBNWB":59}'}
+  properties: {col_widths: '{"JKBNWB":74,"BIXAFN":50,"VHPPCR":10,"EETSUW":40,"ZDHCTG":10}'}
 components:
+- type: Label
+  properties: {}
+  name: label_3
+  layout_properties: {grid_position: 'AXMFDZ,VHPPCR', full_width_row: true}
 - type: Button
   properties: {role: null, align: right, tooltip: '', border: '', enabled: true, foreground: '',
     visible: true, text: log out, font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: ''}
-  layout_properties: {grid_position: 'HWESZE,STEZAR'}
+  layout_properties: {grid_position: 'AXMFDZ,EETSUW HWESZE,STEZAR'}
   event_bindings: {click: log_out_click}
   name: log_out
 - type: RichText
@@ -17,7 +21,8 @@ components:
     spacing_above: small, spacing_below: none, data: null, background: '', format: markdown}
   layout_properties:
     col_widths: {}
-    grid_position: DQMOCH,BIXAFN
+    grid_position: AXMFDZ,EETSUW DQMOCH,BIXAFN
+    full_width_row: true
   name: rich_text_1
   components:
   - type: GridPanel
@@ -354,28 +359,29 @@ components:
       event_bindings: {change: filter_change}
       name: dd_esc_type
 - type: GridPanel
-  properties: {}
-  layout_properties: {grid_position: 'ERFONM,JKBNWB'}
+  properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
+    border: '', visible: true, role: null, tooltip: ''}
+  layout_properties: {grid_position: 'AXMFDZ,EETSUW ERFONM,JKBNWB', full_width_row: true}
   name: grid_panel_2
   components:
   - type: DataGrid
     properties:
       role: null
       columns:
-      - {id: LFNRAY, title: Job ID, data_key: job_id, $$hashKey: 'object:391', width: '80',
-        expand: false}
       - {id: DVFNNA, title: Job Reference, data_key: job_reference, $$hashKey: 'object:393',
-        width: '90', expand: false}
+        width: '140', expand: false}
       - {id: XLQKDN, title: Customer Name, data_key: customer_name, $$hashKey: 'object:395',
-        width: '100', expand: false}
+        width: '140', expand: false}
       - {id: HIBOCD, title: Job Status, data_key: job_status, $$hashKey: 'object:397',
-        width: '80'}
+        width: '140'}
       - {id: FREDFV, title: Escalation Type, data_key: escalation_type, $$hashKey: 'object:399',
-        width: '120'}
+        width: '140'}
       - {id: MVQPXP, title: Escalation Status, data_key: escalation_status, $$hashKey: 'object:401',
-        width: '120'}
-      - {id: JVSRGA, title: Last Action Date, data_key: last_action_date, $$hashKey: 'object:403'}
-      - {id: DCIFYE, title: Assigned To, data_key: assigned_to, $$hashKey: 'object:33580'}
+        width: '140'}
+      - {id: JVSRGA, title: Last Action Date, data_key: last_action_date, $$hashKey: 'object:403',
+        width: '140'}
+      - {id: DCIFYE, title: Assigned To, data_key: assigned_to, $$hashKey: 'object:33580',
+        width: '140'}
       - {id: YBLVEX, title: Job Report, data_key: job_report, $$hashKey: 'object:405',
         width: '80'}
       - {id: FUNZSD, title: Comment History, data_key: comment_history, $$hashKey: 'object:18690',
@@ -391,7 +397,7 @@ components:
       spacing_above: small
       spacing_below: small
       background: ''
-    layout_properties: {width: 970, row: BEEIKG, width_xs: 12, col_xs: 0}
+    layout_properties: {width: 686, row: BEEIKG, width_xs: 12, col_xs: 0}
     name: data_grid_1
     components:
     - type: RepeatingPanel
@@ -400,3 +406,7 @@ components:
         background: ''}
       layout_properties: {}
       name: repeating_panel_1
+- type: Label
+  properties: {}
+  name: label_4
+  layout_properties: {grid_position: 'AXMFDZ,ZDHCTG'}
