--- a/client_code/Mainpage/Modal/Actionlog/form_template.yaml
+++ b/client_code/Mainpage/Modal/Actionlog/form_template.yaml
@@ -10,35 +10,56 @@ components:
   layout_properties: {grid_position: 'ENQJZO,ABMXWP'}
   components:
   - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Status:', font_size: 14, font: '', spacing_above: none,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'FJYURP,CXWTCX'}
+  - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: 12, font: '', spacing_above: none, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: true, underline: false,
+      visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
+      spacing_below: none, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: status
     layout_properties: {grid_position: 'FJYURP,PVXDRB'}
     data_bindings:
-    - {property: text, code: '"Status: "+self.item[''status''][''name'']'}
+    - {property: text, code: 'self.item[''status''][''name'']'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Submitted by:', font_size: 14, font: '', spacing_above: none,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+      underline: false, icon: ''}
+    name: label_2
+    layout_properties: {grid_position: 'QNTUTC,LAYPPO'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: 11, font: '', spacing_above: none, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: true, underline: false,
+      visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
+      spacing_below: none, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: user
     layout_properties: {grid_position: 'QNTUTC,FTUSFV'}
     data_bindings:
     - {property: text, code: 'self.item[''user''][''name'']'}
   - type: Label
-    properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: 11, font: '', spacing_above: none, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: datetime
-    layout_properties: {grid_position: 'QNTUTC,AFLYUV'}
-    data_bindings:
-    - {property: text, code: 'self.item[''created_date''].strftime("%d/%m/%-y %H:%M")'}
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Submitted on:', font_size: 14, font: '', spacing_above: none,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+      underline: false, icon: ''}
+    name: label_3
+    layout_properties: {grid_position: 'CWXDSD,ZJVJPJ'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: 11, font: '', spacing_above: none, icon_align: left,
+      visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
+      spacing_below: none, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
+    name: datetime
+    layout_properties: {grid_position: 'CWXDSD,IQUQFO'}
+    data_bindings:
+    - {property: text, code: 'self.item[''created_date''].strftime("%d-%m-%-y %H:%M")'}
+  - type: Label
+    properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: content
