--- a/client_code/Mainpage/Modal/Actionlog/form_template.yaml
+++ b/client_code/Mainpage/Modal/Actionlog/form_template.yaml
@@ -12,14 +12,14 @@ components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: 'Status:', font_size: 14, font: '', spacing_above: none,
-      icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_1
     layout_properties: {grid_position: 'FJYURP,CXWTCX'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
-      spacing_below: none, italic: false, background: '', bold: false, underline: false,
+      spacing_below: none, italic: false, background: '', bold: true, underline: false,
       icon: ''}
     name: status
     layout_properties: {grid_position: 'FJYURP,PVXDRB'}
@@ -28,14 +28,14 @@ components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: 'Submitted by:', font_size: 14, font: '', spacing_above: none,
-      icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_2
     layout_properties: {grid_position: 'QNTUTC,LAYPPO'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
-      spacing_below: none, italic: false, background: '', bold: false, underline: false,
+      spacing_below: none, italic: false, background: '', bold: true, underline: false,
       icon: ''}
     name: user
     layout_properties: {grid_position: 'QNTUTC,FTUSFV'}
@@ -44,14 +44,14 @@ components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: 'Submitted on:', font_size: 14, font: '', spacing_above: none,
-      icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_3
     layout_properties: {grid_position: 'CWXDSD,ZJVJPJ'}
   - type: Label
     properties: {role: body, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
-      spacing_below: none, italic: false, background: '', bold: false, underline: false,
+      spacing_below: none, italic: false, background: '', bold: true, underline: false,
       icon: ''}
     name: datetime
     layout_properties: {grid_position: 'CWXDSD,IQUQFO'}
