Created comment.png and report_icon.jpg; Edited Mainpage.Mainpage.RowTemplate1, Mainpage.Modal.Actionlog and Mainpage.Mainpage

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -14,5 +14,7 @@ unique_ids:
     ServerModule1: '1687138212883237411144622.2109'
   assets:
     R.jpg: '1687135371492852443371809.9163'
+    comment.png: '168913302064741437623884.82086'
+    report_icon.jpg: '1689132302013249154293288.70474'
     standard-page.html: GMPM3KEVMDU4OOJNM5N7GZETSM3G5FAX
     theme.css: OGFNOPXCPEXK6NN4XFYKC2MLE3QBBHDG
