--- a/client_code/Mainpage/Modal/Actionlog/form_template.yaml
+++ b/client_code/Mainpage/Modal/Actionlog/form_template.yaml
@@ -10,8 +10,8 @@ components:
   layout_properties: {grid_position: 'ENQJZO,ABMXWP'}
   components:
   - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Status:', font_size: 14, font: '', spacing_above: none,
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
+        Font', visible: true, text: 'Status:', font_size: 14, font: '', spacing_above: none,
       icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_1
@@ -26,8 +26,8 @@ components:
     data_bindings:
     - {property: text, code: 'self.item[''status''][''name'']'}
   - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Submitted by:', font_size: 14, font: '', spacing_above: none,
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
+        Font', visible: true, text: 'Submitted by:', font_size: 14, font: '', spacing_above: none,
       icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_2
@@ -42,8 +42,8 @@ components:
     data_bindings:
     - {property: text, code: 'self.item[''user''][''name'']'}
   - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Submitted on:', font_size: 14, font: '', spacing_above: none,
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
+        Font', visible: true, text: 'Submitted on:', font_size: 14, font: '', spacing_above: none,
       icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_3
