--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -1,7 +1,7 @@
 is_package: true
 container:
   type: ColumnPanel
-  properties: {col_widths: '{"JKBNWB":74,"VHPPCR":15,"EETSUW":30,"ZDHCTG":15,"NBATXT":17,"STEZAR":20,"ZWTDKT":23}'}
+  properties: {col_widths: '{"JKBNWB":74,"VHPPCR":10,"EETSUW":40,"ZDHCTG":10,"NBATXT":17,"STEZAR":20,"ZWTDKT":23}'}
 components:
 - type: Label
   properties: {}
@@ -387,13 +387,13 @@ components:
       - {id: XLQKDN, title: Customer Name, data_key: customer_name, $$hashKey: 'object:395',
         width: '140', expand: false}
       - {id: HIBOCD, title: Job Status, data_key: job_status, $$hashKey: 'object:397',
-        width: '140'}
+        width: '120'}
       - {id: FREDFV, title: Escalation Type, data_key: escalation_type, $$hashKey: 'object:399',
         width: '140'}
       - {id: MVQPXP, title: Escalation Status, data_key: escalation_status, $$hashKey: 'object:401',
-        width: '140'}
+        width: '120'}
       - {id: JVSRGA, title: Last Action Date, data_key: last_action_date, $$hashKey: 'object:403',
-        width: '140'}
+        width: '120'}
       - {id: DCIFYE, title: Assigned To, data_key: assigned_to, $$hashKey: 'object:33580',
         width: '140'}
       - {id: YBLVEX, title: Job Report, data_key: job_report, $$hashKey: 'object:405',
@@ -411,9 +411,90 @@ components:
       spacing_above: small
       spacing_below: small
       background: ''
-    layout_properties: {width: 686, row: BEEIKG, width_xs: 12, col_xs: 0}
+    layout_properties: {width: 451.5, row: BEEIKG, width_xs: 12, col_xs: 0}
     name: data_grid_1
     components:
+    - type: DataRowPanel
+      properties: {role: null, align: left, tooltip: '', border: solid gray 1px, foreground: '',
+        auto_display_data: true, visible: true, item: null, font_size: null, font: '',
+        spacing_above: none, spacing_below: none, italic: false, background: '', bold: false,
+        underline: false}
+      name: data_row_panel_1
+      layout_properties: {}
+      components:
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Job Reference, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '{}',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_1
+        layout_properties: {row: XIQSRF, width_xs: 1, col_xs: 0, column: DVFNNA}
+        components: []
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Customer Name, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_2
+        layout_properties: {column: XLQKDN}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Job Status, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_3
+        layout_properties: {column: HIBOCD}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Escalation Type, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_4
+        layout_properties: {column: FREDFV}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Escalation Status, font_size: 12, wrap_on: mobile,
+          font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_5
+        layout_properties: {column: MVQPXP}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Last Action Date, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_6
+        layout_properties: {column: JVSRGA}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Assigned To, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_7
+        layout_properties: {column: DCIFYE}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Job Report, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_8
+        layout_properties: {column: YBLVEX}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: true, text: Comment History, font_size: 12, wrap_on: mobile, font: '',
+          col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+          spacing_below: small, italic: false, background: '', bold: false, underline: false,
+          icon: ''}
+        name: link_9
+        layout_properties: {column: FUNZSD}
     - type: RepeatingPanel
       properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
         visible: true, spacing_above: none, spacing_below: none, item_template: Mainpage.Mainpage.RowTemplate1,
