--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -24,7 +24,7 @@ components:
     italic: false, background: '', bold: false, underline: false, icon: ''}
   layout_properties: {column: JVSRGA}
   data_bindings:
-  - {code: 'self.item[''last_action_date''].strftime("%d-%m-%-y %H:%M")', property: text}
+  - {code: 'self.item[''last_action_date''].strftime("%d %b, %Y %H:%M")', property: text}
   name: label_2
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
