Created Mainpage.Modal_wide and Mainpage.Modal_wide.RowTemplate2; Edited Mainpage.Mainpage.RowTemplate1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,11 +1,13 @@
 unique_ids:
   forms:
-    Homepage: VY3XQF7XYCO43UXCOG4EM42WVI2XP64Q
-    Mainpage.Mainpage: '1687135635536734583197220.891'
-    Mainpage.Mainpage.ItemTemplate1: '1687332081139740291484546.4254'
-    Mainpage.Mainpage.RowTemplate1: '1687139172855366975840770.57874'
     Mainpage.Modal: OGOYIRPEPYZISH2CR5OWTAO5GFWDKPK3
+    Mainpage.Mainpage.ItemTemplate1: '1687332081139740291484546.4254'
+    Mainpage.Modal_wide: '1689574363975929302088613.0068'
+    Homepage: VY3XQF7XYCO43UXCOG4EM42WVI2XP64Q
+    Mainpage.Modal_wide.RowTemplate2: '1689575363220319688708390.78265'
+    Mainpage.Mainpage.RowTemplate1: '1687139172855366975840770.57874'
     Mainpage.Modal.Actionlog: '1687327361440489905191294.7403'
+    Mainpage.Mainpage: '1687135635536734583197220.891'
     Mainpage.jobreport: '1688086294670249841987606.80542'
   modules:
     Data: '168713694717361145552226.54161'
