Edited Mainpage.Mainpage, Mainpage.Mainpage.RowTemplate1, Mainpage.Modal_wide, Mainpage.Modal_wide.RowTemplate2 and 2 more

--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -12,7 +12,7 @@ roles:
   display_in_toolbox: false
   title: Elevated Card
 - name: tonal-card
-  components: [ColumnPanel, LinearPanel, XYPanel, RepeatingPanel]
+  components: [ColumnPanel, LinearPanel, XYPanel, RepeatingPanel, Label]
   display_in_toolbox: false
   title: Tonal Card
 - {name: outlined-button, components: null, display_in_toolbox: true, title: Outlined Button}
