--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -79,3 +79,9 @@ components:
     layout_properties: {grid_position: 'FNFUHH,IXEBZG'}
     event_bindings: {click: widecomment_click}
   event_bindings: {click: comment_click}
+- type: ColumnPanel
+  properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
+    background: ''}
+  name: outlined_card_1
+  layout_properties: {column: null}
