--- a/client_code/Mainpage/Modal_wide/form_template.yaml
+++ b/client_code/Mainpage/Modal_wide/form_template.yaml
@@ -1,7 +1,7 @@
 container: {type: ColumnPanel}
 components:
 - type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+  properties: {role: border-bottom, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"QFIVOG":25}',
     spacing_below: small, background: ''}
   name: column_panel_1
@@ -107,7 +107,8 @@ components:
     data_bindings:
     - {property: text, code: '"Comment History"'}
   - type: GridPanel
-    properties: {}
+    properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
+      border: '', visible: true, role: border_bottom, tooltip: ''}
     name: grid_panel_1
     layout_properties: {grid_position: 'BYPWWV,NYAHLU'}
     components:
@@ -132,10 +133,12 @@ components:
         spacing_below: small
         background: ''
       name: data_grid_1
-      layout_properties: {row: GWVHLC, width_xs: 12, col_xs: 0, width: 750}
+      layout_properties: {row: GWVHLC, width_xs: 12, col_xs: 0, width: 970}
       components:
       - type: RepeatingPanel
-        properties: {spacing_above: none, spacing_below: none, item_template: Mainpage.Modal_wide.RowTemplate2}
+        properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+          visible: true, spacing_above: none, spacing_below: none, item_template: Mainpage.Modal_wide.RowTemplate2,
+          background: ''}
         name: action_panelwide
         layout_properties: {}
 is_package: true
