--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -372,6 +372,21 @@ components:
       - {code: 'self.filters[''esc_type'']', writeback: true, property: selected_value}
       event_bindings: {change: filter_change}
       name: dd_esc_type
+    - type: TextBox
+      properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: Enter search term,
+        border: '', enabled: true, foreground: 'theme:Filter Font', visible: true,
+        text: '', font_size: 12, font: '', spacing_above: small, type: text, spacing_below: small,
+        italic: true, background: '', bold: false, underline: false}
+      name: text_box_search
+      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 0, width: 116}
+    - type: Button
+      properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: Search, font_size: 12, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:search'}
+      name: button_1
+      layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 2, width: 88.6562}
+      event_bindings: {click: search}
 - type: GridPanel
   properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
     border: '', visible: true, role: null, tooltip: ''}
