--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -374,11 +374,11 @@ components:
       name: dd_esc_type
     - type: TextBox
       properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: Enter search term,
-        border: '', enabled: true, foreground: 'theme:Filter Font', visible: true,
-        text: '', font_size: 12, font: '', spacing_above: small, type: text, spacing_below: small,
-        italic: true, background: '', bold: false, underline: false}
+        border: '', enabled: true, foreground: 'theme:Font', visible: true, text: '',
+        font_size: 14, font: 'theme:Font', spacing_above: small, type: text, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false}
       name: text_box_search
-      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 0, width: 116}
+      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 0, width: 114}
       event_bindings: {pressed_enter: search}
     - type: Button
       properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
