--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -386,8 +386,16 @@ components:
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:search'}
       name: button_1
-      layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 2, width: 88.6562}
+      layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 3, width: 88.6562}
       event_bindings: {click: search}
+    - type: Link
+      properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+        spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: 'fa:times-circle'}
+      name: link_1
+      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 5, width: 148}
+      event_bindings: {click: clear_search}
 - type: GridPanel
   properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
     border: '', visible: true, role: null, tooltip: ''}
