--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -396,6 +396,14 @@ components:
       name: clear_icon
       layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 5, width: 148}
       event_bindings: {click: clear_search}
+    - type: CheckBox
+      properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+        foreground: 'theme:Filter Font', allow_indeterminate: false, visible: true,
+        text: '', font_size: 12, font: '', spacing_above: small, spacing_below: small,
+        italic: false, background: '', bold: false, checked: false, underline: false}
+      name: resolved_checkbox
+      layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 6, width: 88.6562}
+      event_bindings: {change: resolved_checkbox_change}
 - type: GridPanel
   properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
     border: '', visible: true, role: null, tooltip: ''}
