--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -400,13 +400,13 @@ components:
       layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 3, width: 88.6562}
       event_bindings: {click: search}
     - type: CheckBox
-      properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      properties: {role: switch-rounded, align: left, tooltip: '', border: '', enabled: true,
         foreground: 'theme:Filter Font', allow_indeterminate: false, visible: true,
-        text: '   Show Resolved items', font_size: 12, font: '', spacing_above: small,
+        text: '   Show Resolved items', font_size: 14, font: '', spacing_above: small,
         spacing_below: small, italic: false, background: '', bold: false, checked: false,
         underline: false}
       name: resolved_checkbox
-      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 6, width: 148}
+      layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 6, width: 146.828}
       event_bindings: {change: resolved_checkbox_click}
 - type: GridPanel
   properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
