--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -37,6 +37,10 @@ roles:
   components: [TextBox, TextArea, DatePicker, DropDown]
 - name: input-error
   components: [TextBox, TextArea, DatePicker, DropDown]
+- name: switch
+  components: [CheckBox]
+- name: switch-rounded
+  components: [CheckBox]
 color_scheme:
   preset_groups:
   - name: Colour Scheme
