--- a/anvil.yaml
+++ b/anvil.yaml
@@ -58,7 +58,7 @@ db_schema:
       admin_ui: {width: 200}
       type: string
   files:
-    client: none
+    client: full
     server: full
     columns:
     - name: path
