Created Electrolux.png, jbh.png and Electrolux3.png; Edited settings, ServerModule1 and Mainpage.Mainpage

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -15,8 +15,11 @@ unique_ids:
   server_modules:
     ServerModule1: '1687138212883237411144622.2109'
   assets:
+    Electrolux.png: '1689822058367482418863446.6455'
+    Electrolux3.png: '1689822047578858518846747.1674'
     R.jpg: '1687135371492852443371809.9163'
     comment.png: '168913302064741437623884.82086'
+    jbh.png: '1689822039387109455246945.68797'
     report_icon.jpg: '1689132302013249154293288.70474'
     standard-page.html: GMPM3KEVMDU4OOJNM5N7GZETSM3G5FAX
     theme.css: OGFNOPXCPEXK6NN4XFYKC2MLE3QBBHDG
